syntax = "proto3";
package protobuf;
option go_package = "./packet";

message WorkerSession{ 
	int32  id = 1;
	string timestamp = 2;
	DisplaySession  display = 3;
	ThinkmaySession thinkmay = 4;
	SunshineSession sunshine = 5;
}

message DisplaySession{ 
	int32 DisplayIndex = 2; // do sync
	string DisplayName = 3; // do sync
	int32 ScreenWidth = 6;
	int32 ScreenHeight = 7;
}

message ThinkmaySession{ 
	string authConfig 		   	= 3; // do sync
	string webrtcConfig    		= 5; // do sync
}

message SunshineSession{ 
	string username = 3; // do sync
	string password = 4; // do sync
}

message WorkerInfor{ 
	string   Hostname   = 2;
	string   CPU        = 3;
	string   RAM        = 4;
	string   BIOS       = 5;

	string   PublicIP   = 6;
	string   PrivateIP  = 7;

	repeated string GPUs    = 8;
	optional int32 TurnPort = 9;
}

message WorkerLog{ 
	string timestamp = 1;

	string log       = 2;
	string level     = 3;
	string source    = 4;
}